framework_part4/src/scanparse/y.output
Grammar

    0 $accept: program $end

    1 program: declarations

    2 declarations: decl declarations
    3             | decl

    4 decl: globaldec
    5     | globaldef
    6     | fundef

    7 globaldec: EXTERN type ID SEMICOLON
    8          | EXTERN type ID STRAIGHT_BRACKET_L ids STRAIGHT_BRACKET_R SEMICOLON

    9 globaldef: EXPORT globaldef
   10          | type ID SEMICOLON
   11          | type ID LET expr SEMICOLON
   12          | type ID exprs SEMICOLON
   13          | type ID exprs LET expr SEMICOLON

   14 stmts: stmt stmts
   15      | stmt

   16 stmt: assign
   17     | while
   18     | dowhile
   19     | for
   20     | if
   21     | return
   22     | exprstmt

   23 assign: varlet LET expr SEMICOLON

   24 while: WHILE BRACKET_L expr BRACKET_R CURLY_BRACKET_L stmts CURLY_BRACKET_R

   25 dowhile: DO CURLY_BRACKET_L stmts CURLY_BRACKET_R WHILE BRACKET_L expr BRACKET_R SEMICOLON

   26 if: IF BRACKET_L expr BRACKET_R stmt
   27   | IF BRACKET_L expr BRACKET_R stmt ELSE stmt
   28   | IF BRACKET_L expr BRACKET_R CURLY_BRACKET_L stmts CURLY_BRACKET_R ELSE CURLY_BRACKET_L stmts CURLY_BRACKET_R
   29   | IF BRACKET_L expr BRACKET_R stmt ELSE CURLY_BRACKET_L stmts CURLY_BRACKET_R
   30   | IF BRACKET_L expr BRACKET_R CURLY_BRACKET_L stmts CURLY_BRACKET_R ELSE stmt

   31 for: FOR BRACKET_L INT ID LET expr COMMA expr COMMA expr BRACKET_R CURLY_BRACKET_L exprs CURLY_BRACKET_R
   32    | FOR BRACKET_L INT ID LET expr COMMA expr BRACKET_R CURLY_BRACKET_R exprs CURLY_BRACKET_R

   33 return: RETURN expr SEMICOLON
   34       | RETURN SEMICOLON

   35 exprstmt: ID BRACKET_L expr BRACKET_R SEMICOLON

   36 funbody: vardec
   37        | vardec fundefs
   38        | vardec stmts
   39        | fundefs stmts
   40        | stmts
   41        | fundefs
   42        | vardec fundefs stmts

   43 fundefs: fundef
   44        | fundef fundefs

   45 fundef: EXPORT fundef
   46       | type ID BRACKET_L BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   47       | VOID ID BRACKET_L BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   48       | type ID BRACKET_L param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   49       | VOID ID BRACKET_L param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   50       | type ID BRACKET_L BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   51       | VOID ID BRACKET_L BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   52       | type ID BRACKET_L param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   53       | VOID ID BRACKET_L param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R

   54 param: type ID COMMA param
   55      | type ID
   56      | type STRAIGHT_BRACKET_L ids STRAIGHT_BRACKET_R ID
   57      | type STRAIGHT_BRACKET_L ids STRAIGHT_BRACKET_R ID param

   58 ids: ID
   59    | ID COMMA ids

   60 vardec: vardec type ID SEMICOLON
   61       | vardec type ID LET expr SEMICOLON
   62       | vardec type STRAIGHT_BRACKET_L exprs STRAIGHT_BRACKET_R ID SEMICOLON
   63       | vardec type STRAIGHT_BRACKET_L exprs STRAIGHT_BRACKET_R ID LET expr SEMICOLON
   64       | type ID SEMICOLON
   65       | type ID LET expr SEMICOLON
   66       | type STRAIGHT_BRACKET_L exprs STRAIGHT_BRACKET_R ID SEMICOLON
   67       | type STRAIGHT_BRACKET_L exprs STRAIGHT_BRACKET_R ID LET expr SEMICOLON

   68 varlet: ID exprs
   69       | ID

   70 exprs: expr COMMA exprs
   71      | expr

   72 expr: constant
   73     | BRACKET_L expr BRACKET_R
   74     | var
   75     | funcall
   76     | NOT expr
   77     | MINUS expr
   78     | cast
   79     | expr PLUS expr
   80     | expr MINUS expr
   81     | expr STAR expr
   82     | expr SLASH expr
   83     | expr PERCENT expr
   84     | expr LE expr
   85     | expr LT expr
   86     | expr GE expr
   87     | expr GT expr
   88     | expr EQ expr
   89     | expr NE expr
   90     | expr OR expr
   91     | expr AND expr
   92     | ID arrexpr
   93     | arrexpr

   94 cast: BRACKET_L type BRACKET_R expr

   95 funcall: ID BRACKET_L exprs BRACKET_R
   96        | ID BRACKET_L BRACKET_R

   97 arrexpr: STRAIGHT_BRACKET_L exprs STRAIGHT_BRACKET_R

   98 var: ID

   99 constant: floatval
  100         | intval
  101         | boolval

  102 floatval: FLOAT

  103 intval: NUM

  104 boolval: TRUEVAL
  105        | FALSEVAL

  106 type: INT
  107     | FLT
  108     | BOOL


Terminals, with rules where they appear

$end (0) 0
error (256)
BRACKET_L (258) 24 25 26 27 28 29 30 31 32 35 46 47 48 49 50 51 52
    53 73 94 95 96
BRACKET_R (259) 24 25 26 27 28 29 30 31 32 35 46 47 48 49 50 51 52
    53 73 94 95 96
CURLY_BRACKET_L (260) 24 25 28 29 30 31 46 47 48 49 50 51 52 53
CURLY_BRACKET_R (261) 24 25 28 29 30 31 32 46 47 48 49 50 51 52 53
STRAIGHT_BRACKET_L (262) 8 56 57 62 63 66 67 97
STRAIGHT_BRACKET_R (263) 8 56 57 62 63 66 67 97
COMMA (264) 31 32 54 59 70
SEMICOLON (265) 7 8 10 11 12 13 23 25 33 34 35 60 61 62 63 64 65 66
    67
MINUS (266) 77 80
PLUS (267) 79
STAR (268) 81
SLASH (269) 82
PERCENT (270) 83
LE (271) 84
LT (272) 85
GE (273) 86
GT (274) 87
EQ (275) 88
NE (276) 89
OR (277) 90
AND (278) 91
TRUEVAL (279) 104
FALSEVAL (280) 105
LET (281) 11 13 23 31 32 61 63 65 67
NOT (282) 76
IF (283) 26 27 28 29 30
ELSE (284) 27 28 29 30
WHILE (285) 24 25
DO (286) 25
FOR (287) 31 32
RETURN (288) 33 34
EXTERN (289) 7 8
EXPORT (290) 9 45
VOID (291) 47 49 51 53
INT (292) 31 32 106
FLT (293) 107
BOOL (294) 108
NUM (295) 103
FLOAT (296) 102
ID (297) 7 8 10 11 12 13 31 32 35 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66 67 68 69 92 95 96 98
UNARY (298)
IFX (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
declarations (47)
    on left: 2 3, on right: 1 2
decl (48)
    on left: 4 5 6, on right: 2 3
globaldec (49)
    on left: 7 8, on right: 4
globaldef (50)
    on left: 9 10 11 12 13, on right: 5 9
stmts (51)
    on left: 14 15, on right: 14 24 25 28 29 30 38 39 40 42
stmt (52)
    on left: 16 17 18 19 20 21 22, on right: 14 15 26 27 29 30
assign (53)
    on left: 23, on right: 16
while (54)
    on left: 24, on right: 17
dowhile (55)
    on left: 25, on right: 18
if (56)
    on left: 26 27 28 29 30, on right: 20
for (57)
    on left: 31 32, on right: 19
return (58)
    on left: 33 34, on right: 21
exprstmt (59)
    on left: 35, on right: 22
funbody (60)
    on left: 36 37 38 39 40 41 42, on right: 46 47 48 49
fundefs (61)
    on left: 43 44, on right: 37 39 41 42 44
fundef (62)
    on left: 45 46 47 48 49 50 51 52 53, on right: 6 43 44 45
param (63)
    on left: 54 55 56 57, on right: 48 49 52 53 54 57
ids (64)
    on left: 58 59, on right: 8 56 57 59
vardec (65)
    on left: 60 61 62 63 64 65 66 67, on right: 36 37 38 42 60 61 62
    63
varlet (66)
    on left: 68 69, on right: 23
exprs (67)
    on left: 70 71, on right: 12 13 31 32 62 63 66 67 68 70 95 97
expr (68)
    on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    90 91 92 93, on right: 11 13 23 24 25 26 27 28 29 30 31 32 33 35
    61 63 65 67 70 71 73 76 77 79 80 81 82 83 84 85 86 87 88 89 90
    91 94
cast (69)
    on left: 94, on right: 78
funcall (70)
    on left: 95 96, on right: 75
arrexpr (71)
    on left: 97, on right: 92 93
var (72)
    on left: 98, on right: 74
constant (73)
    on left: 99 100 101, on right: 72
floatval (74)
    on left: 102, on right: 99
intval (75)
    on left: 103, on right: 100
boolval (76)
    on left: 104 105, on right: 101
type (77)
    on left: 106 107 108, on right: 7 8 10 11 12 13 46 48 50 52 54
    55 56 57 60 61 62 63 64 65 66 67 94


State 0

    0 $accept: . program $end

    EXTERN  shift, and go to state 1
    EXPORT  shift, and go to state 2
    VOID    shift, and go to state 3
    INT     shift, and go to state 4
    FLT     shift, and go to state 5
    BOOL    shift, and go to state 6

    program       go to state 7
    declarations  go to state 8
    decl          go to state 9
    globaldec     go to state 10
    globaldef     go to state 11
    fundef        go to state 12
    type          go to state 13


State 1

    7 globaldec: EXTERN . type ID SEMICOLON
    8          | EXTERN . type ID STRAIGHT_BRACKET_L ids STRAIGHT_BRACKET_R SEMICOLON

    INT   shift, and go to state 4
    FLT   shift, and go to state 5
    BOOL  shift, and go to state 6

    type  go to state 14


State 2

    9 globaldef: EXPORT . globaldef
   45 fundef: EXPORT . fundef

    EXPORT  shift, and go to state 2
    VOID    shift, and go to state 3
    INT     shift, and go to state 4
    FLT     shift, and go to state 5
    BOOL    shift, and go to state 6

    globaldef  go to state 15
    fundef     go to state 16
    type       go to state 13


State 3

   47 fundef: VOID . ID BRACKET_L BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   49       | VOID . ID BRACKET_L param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   51       | VOID . ID BRACKET_L BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   53       | VOID . ID BRACKET_L param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R

    ID  shift, and go to state 17


State 4

  106 type: INT .

    $default  reduce using rule 106 (type)


State 5

  107 type: FLT .

    $default  reduce using rule 107 (type)


State 6

  108 type: BOOL .

    $default  reduce using rule 108 (type)


State 7

    0 $accept: program . $end

    $end  shift, and go to state 18


State 8

    1 program: declarations .

    $default  reduce using rule 1 (program)


State 9

    2 declarations: decl . declarations
    3             | decl .

    EXTERN  shift, and go to state 1
    EXPORT  shift, and go to state 2
    VOID    shift, and go to state 3
    INT     shift, and go to state 4
    FLT     shift, and go to state 5
    BOOL    shift, and go to state 6

    $default  reduce using rule 3 (declarations)

    declarations  go to state 19
    decl          go to state 9
    globaldec     go to state 10
    globaldef     go to state 11
    fundef        go to state 12
    type          go to state 13


State 10

    4 decl: globaldec .

    $default  reduce using rule 4 (decl)


State 11

    5 decl: globaldef .

    $default  reduce using rule 5 (decl)


State 12

    6 decl: fundef .

    $default  reduce using rule 6 (decl)


State 13

   10 globaldef: type . ID SEMICOLON
   11          | type . ID LET expr SEMICOLON
   12          | type . ID exprs SEMICOLON
   13          | type . ID exprs LET expr SEMICOLON
   46 fundef: type . ID BRACKET_L BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   48       | type . ID BRACKET_L param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   50       | type . ID BRACKET_L BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   52       | type . ID BRACKET_L param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R

    ID  shift, and go to state 20


State 14

    7 globaldec: EXTERN type . ID SEMICOLON
    8          | EXTERN type . ID STRAIGHT_BRACKET_L ids STRAIGHT_BRACKET_R SEMICOLON

    ID  shift, and go to state 21


State 15

    9 globaldef: EXPORT globaldef .

    $default  reduce using rule 9 (globaldef)


State 16

   45 fundef: EXPORT fundef .

    $default  reduce using rule 45 (fundef)


State 17

   47 fundef: VOID ID . BRACKET_L BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   49       | VOID ID . BRACKET_L param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   51       | VOID ID . BRACKET_L BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   53       | VOID ID . BRACKET_L param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R

    BRACKET_L  shift, and go to state 22


State 18

    0 $accept: program $end .

    $default  accept


State 19

    2 declarations: decl declarations .

    $default  reduce using rule 2 (declarations)


State 20

   10 globaldef: type ID . SEMICOLON
   11          | type ID . LET expr SEMICOLON
   12          | type ID . exprs SEMICOLON
   13          | type ID . exprs LET expr SEMICOLON
   46 fundef: type ID . BRACKET_L BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   48       | type ID . BRACKET_L param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   50       | type ID . BRACKET_L BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   52       | type ID . BRACKET_L param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R

    BRACKET_L           shift, and go to state 23
    STRAIGHT_BRACKET_L  shift, and go to state 24
    SEMICOLON           shift, and go to state 25
    MINUS               shift, and go to state 26
    TRUEVAL             shift, and go to state 27
    FALSEVAL            shift, and go to state 28
    LET                 shift, and go to state 29
    NOT                 shift, and go to state 30
    NUM                 shift, and go to state 31
    FLOAT               shift, and go to state 32
    ID                  shift, and go to state 33

    exprs     go to state 34
    expr      go to state 35
    cast      go to state 36
    funcall   go to state 37
    arrexpr   go to state 38
    var       go to state 39
    constant  go to state 40
    floatval  go to state 41
    intval    go to state 42
    boolval   go to state 43


State 21

    7 globaldec: EXTERN type ID . SEMICOLON
    8          | EXTERN type ID . STRAIGHT_BRACKET_L ids STRAIGHT_BRACKET_R SEMICOLON

    STRAIGHT_BRACKET_L  shift, and go to state 44
    SEMICOLON           shift, and go to state 45


State 22

   47 fundef: VOID ID BRACKET_L . BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   49       | VOID ID BRACKET_L . param BRACKET_R CURLY_BRACKET_L funbody CURLY_BRACKET_R
   51       | VOID ID BRACKET_L . BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R
   53       | VOID ID BRACKET_L . param BRACKET_R CURLY_BRACKET_L CURLY_BRACKET_R

    BRACKET_R  shift, and go to state 46
    INT        shift, and go to state 4
    FLT        shift, and go to state 5
    BOOL       shift, and go to state 6

    param  go to state 47
    type   go to state 48


State 23
